--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Prontuario do paciente Online";
+    ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem-vindo a @ViewData</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4"> Bem vindo!</h1>
+    <h2 class="display-4"> On Pront - Prontuário do Paciente Online</h2>
+    <p>Projeto de conclusão de curso - Sistemas de informação</p>
 </div>
