--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Edit.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>CadastroPaciente</h4>
+<h1>Editar o cadastro do paciente</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,15 +56,17 @@
                 <input asp-for="Motivo" class="form-control" />
                 <span asp-validation-for="Motivo" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="PossuiAcompanhante" /> @Html.DisplayNameFor(model => model.PossuiAcompanhante)
+                </label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
