--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Delete.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir o paciente @Model.Nome?</h3>
 <div>
-    <h4>CadastroPaciente</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -65,11 +62,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Motivo)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PossuiAcompanhante)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PossuiAcompanhante)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-secondary" asp-action="Index">Voltar</a>
     </form>
 </div>
