--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Details.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Paciente</h1>
 
 <div>
-    <h4>CadastroPaciente</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -64,9 +63,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Motivo)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PossuiAcompanhante)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PossuiAcompanhante)
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary" asp-action="Index">Voltar</a>
 </div>
