--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Cadastro do paciente</h1>
+<h1>Pacientes Cadastrados</h1>
 
 <p>
-    <a asp-action="Create">Cadastrar um novo paciente</a>
+    <a asp-action="Create">Adicionar novo paciente</a>
 </p>
 <table class="table">
     <thead>
@@ -38,6 +38,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Motivo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PossuiAcompanhante)
             </th>
             <th></th>
         </tr>
@@ -71,6 +74,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Motivo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PossuiAcompanhante)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
