--- a/Prontuario do Paciente Online/Views/Shared/_Layout.cshtml
+++ b/Prontuario do Paciente Online/Views/Shared/_Layout.cshtml
@@ -22,14 +22,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CadastroPacientes" asp-action="Index">Cadastro do paciente</a> 
-                        </li> 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CadastroPacientes" asp-action="Index">Cadastro do Acompanhante</a> 
-                        </li> 
+                        <li class="nav-item dropdown">
+                            <!-- Item de menu com submenu -->
+                            <a class="nav-link text-dark dropdown-toggle" href="#" id="cadastroSubMenu" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Cadastrar
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="cadastroSubMenu">
+                                <a class="dropdown-item" asp-area="" asp-controller="CadastroPacientes" asp-action="Index">Pacientes</a>
+@*                                <a class="dropdown-item" asp-area="" asp-controller="CadastroAcompanhantes" asp-action="Index">Acompanhantes</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="UsuarioInterno" asp-action="Index">Usuário Interno</a>*@
+                            </div>
+                        </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
@@ -39,9 +45,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom m-sm-1">
         <div class="container">
-            &copy; 2023 - Prontuario_do_Paciente_Online - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - On Pront - Prontuário do Paciente Online - Versão 1.0.0
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
