Ultimas atualizacoes do projeto

--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Edit.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Edit.cshtml
@@ -62,7 +62,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Voltar</a>
             </div>
         </form>
