--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Delete.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Delete.cshtml
@@ -72,7 +72,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
         <a class="btn btn-secondary" asp-action="Index">Voltar</a>
     </form>
 </div>
