--- a/Prontuario do Paciente Online/Views/CadastroPacientes/Details.cshtml
+++ b/Prontuario do Paciente Online/Views/CadastroPacientes/Details.cshtml
@@ -72,6 +72,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
     <a class="btn btn-secondary" asp-action="Index">Voltar</a>
 </div>
+
