--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -6,4 +6,6 @@
     <h1 class="display-4"> Bem vindo!</h1>
     <h2 class="display-4"> On Pront - Prontuário do Paciente Online</h2>
     <p>Projeto de conclusão de curso - Sistemas de informação</p>
+
+    <p class="text-danger"> O menu está vermelho por que a função ainda não foi implementada</p>
 </div>
