--- a/Prontuario do Paciente Online/Views/PacienteXAcompanhante/Details.cshtml
+++ b/Prontuario do Paciente Online/Views/PacienteXAcompanhante/Details.cshtml
@@ -1,11 +1,11 @@
-﻿@model Prontuario_do_Paciente_Online.Models.CadastroPaciente
+﻿@model Prontuario_do_Paciente_Online.Models.PacienteXAcompanhante
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h3>Você tem certeza que deseja excluir o paciente @Model.Nome?</h3>
 <div>
+    <h4>Detalhes do Paciente</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -62,17 +62,46 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Motivo)
         </dd>
+    </dl>
+</div>
+<div>
+    <h4>Detalhes do Acompanhante</h4>
+    <hr />
+    <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PossuiAcompanhante)
+            @Html.DisplayNameFor(model => model.NomeAcompanhante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PossuiAcompanhante)
+            @Html.DisplayFor(model => model.NomeAcompanhante)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CPFAcompanhante)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CPFAcompanhante)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Celular)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Celular)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.GrauParentesco)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.GrauParentesco)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Excluir" class="btn btn-danger" /> |
-        <a class="btn btn-secondary" asp-action="Index">Voltar</a>
-    </form>
 </div>
+<div>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
+    <a class="btn btn-secondary" asp-action="Index">Voltar</a>
+</div>
+
