--- a/Prontuario do Paciente Online/Views/PacienteXAcompanhante/Edit.cshtml
+++ b/Prontuario do Paciente Online/Views/PacienteXAcompanhante/Edit.cshtml
@@ -1,14 +1,17 @@
-﻿@model Prontuario_do_Paciente_Online.Models.CadastroPaciente
+﻿@model Prontuario_do_Paciente_Online.Models.PacienteXAcompanhante
+
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Cadastro do Paciente</h1>
+<h1>Editar informações do paciente</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -16,11 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Sexo" class="control-label"></label>
-                <select asp-for="Sexo" class="form-control">
-                    <option value="">SELECIONE</option>
-                    <option value="M">Masculino</option>
-                    <option value="F">Feminino</option>
-                </select>
+                <input asp-for="Sexo" class="form-control" />
                 <span asp-validation-for="Sexo" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,36 +49,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <select asp-for="Estado" class="form-control">
-                    <option value="">SELECIONE</option>
-                    <option value="AC">Acre</option>
-                    <option value="AL">Alagoas</option>
-                    <option value="AP">Amapá</option>
-                    <option value="AM">Amazonas</option>
-                    <option value="BA">Bahia</option>
-                    <option value="CE">Ceará</option>
-                    <option value="DF">Distrito Federal</option>
-                    <option value="ES">Espirito Santo</option>
-                    <option value="GO">Goiás</option>
-                    <option value="MA">Maranhão</option>
-                    <option value="MT">Mato Grosso</option>
-                    <option value="MS">Mato Grosso do Sul</option>
-                    <option value="MG">Minas Gerais</option>
-                    <option value="PA">Pará</option>
-                    <option value="PB">Paraíba</option>
-                    <option value="PR">Paraná</option>
-                    <option value="PE">Pernambuco</option>
-                    <option value="PI">Piauí</option>
-                    <option value="RJ">Rio de Janeiro</option>
-                    <option value="RN">Rio Grande do Norte</option>
-                    <option value="RS">Rio Grande do Sul</option>
-                    <option value="RO">Rondônia</option>
-                    <option value="RR">Roraima</option>
-                    <option value="SC">Santa Catarina</option>
-                    <option value="SP">São Paulo</option>
-                    <option value="SE">Sergipe</option>
-                    <option value="TO">Tocantins</option>
-                </select>
+                <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -87,14 +57,34 @@
                 <input asp-for="Motivo" class="form-control" />
                 <span asp-validation-for="Motivo" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="PossuiAcompanhante" /> @Html.DisplayNameFor(model => model.PossuiAcompanhante)
-                </label>
+            <div class="form-group">
+                <label asp-for="NomeAcompanhante" class="control-label"></label>
+                <input asp-for="NomeAcompanhante" class="form-control" />
+                <span asp-validation-for="NomeAcompanhante" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <br>
-                <input type="submit" value="Cadastrar" class="btn btn-primary float-right" />
+                <label asp-for="CPFAcompanhante" class="control-label"></label>
+                <input asp-for="CPFAcompanhante" class="form-control" />
+                <span asp-validation-for="CPFAcompanhante" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Celular" class="control-label"></label>
+                <input asp-for="Celular" class="form-control" />
+                <span asp-validation-for="Celular" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GrauParentesco" class="control-label"></label>
+                <input asp-for="GrauParentesco" class="form-control" />
+                <span asp-validation-for="GrauParentesco" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Voltar</a>
             </div>
         </form>
@@ -102,8 +92,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-       
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
