feat: Adiciona models pertinente ao paciente e acompanhante

--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel;
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -6,3 +6,4 @@
 
 <h1>Index</h1>
 
+    
