Refatorando e implementando tela de administrativo com a funcao de vizualizar pacientes cadastrados

--- a/Prontuario do Paciente Online/Views/Pacientes/Details.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Details.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel;
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>On Pront - Prontuário do Paciente Online</h1>
+<h1>Detalhes do Paciente</h1>
 
-    
