--- a/Prontuario do Paciente Online/Views/Pacientes/Edit.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Edit.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel;
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>On Pront - Prontuário do Paciente Online</h1>
+<h1>Editar dados do Paciente</h1>
 
-    
