--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -3,22 +3,18 @@
     ViewData["Title"] = "Pacientes Cadastrados";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
 <h1>@ViewData["Title"]</h1>
-<div class="card">
+<div class="table">
     <div class="table-responsive">
         <table class="table align-items-center mb-0">
             <thead>
-            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Cpf</th>
-            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Estado</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cidade</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Endereco</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Numero</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Motivo da Internacao</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
-            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ações</th>
+                <tr>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Motivo da Internacao</th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ações</th>
+                </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
@@ -28,22 +24,7 @@
                             @item.Nome
                         </td>
                         <td class="align-middle">
-                            @item.Cpf
-                        </td>
-                        <td class="align-middle">
                             @item.Idade
-                        </td>
-                        <td class="align-middle">
-                            @item.Estado
-                        </td>
-                        <td class="align-middle">
-                            @item.Cidade
-                        </td>
-                        <td class="align-middle">
-                            @item.Endereco
-                        </td>
-                        <td class="align-middle">
-                            @item.Numero
                         </td>
                         <td class="align-middle">
                             @item.MotivoInternacao
@@ -51,10 +32,9 @@
                         <td class="align-middle">
                             @item.StatusPaciente
                         </td>
-
                         <td class="align-middle position-relative">
                             <div class="dropdown position-static">
-                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Ações
                                 </button>
                                 <div class="dropdown-menu position-absolute" style="right: 0;">
@@ -63,16 +43,12 @@
                                 </div>
                             </div>
                         </td>
-
                     </tr>
                 }
             </tbody>
         </table>
     </div>
 </div>
-
-
-<script src="./Scripts/Paciente.js"></script>
 
 
 
