--- a/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
+++ b/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
@@ -35,22 +35,60 @@
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link " asp-controller="Pacientes" asp-action="Index">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#submenu-administrativo">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-archive-2 text-primary text-sm opacity-10"></i>
+                            <i class="ni ni-settings-gear-65 text-info text-sm opacity-10"></i>
                         </div>
                         <span class="nav-link-text ms-1">Administrativo</span>
                     </a>
+                    <ul class="navbar-nav collapse" id="submenu-administrativo">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Pacientes" asp-action="Create">
+                                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                    <i class="ni ni-fat-add text-success text-sm opacity-10"></i>
+                                </div>
+                                <span class="nav-link-text ms-1">Cadastrar Pacientes</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Pacientes" asp-action="Index">
+                                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                    <i class="ni ni-zoom-split-in text-warning text-sm opacity-10"></i>
+                                </div>
+                                <span class="nav-link-text ms-1">Pacientes Cadastrados</span>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="./pages/tables.html">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#submenu-tecnologia">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+                            <i class="ni ni-settings-gear-65 text-info text-sm opacity-10"></i>
                         </div>
                         <span class="nav-link-text ms-1">Tecnologia</span>
                     </a>
+                    <ul class="navbar-nav collapse" id="submenu-tecnologia">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="#" asp-action="#">
+                                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                    <i class="ni ni-fat-add text-success text-sm opacity-10"></i>
+                                </div>
+                                <span class="nav-link-text ms-1">Cadastrar Usuario</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="#" asp-action="#">
+                                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                    <i class="ni ni-single-02 text-warning text-sm opacity-10"></i>
+                                </div>
+                                <span class="nav-link-text ms-1">Acessos</span>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
-                <li class="nav-item">
+
+                @*<li class="nav-item">
                     <a class="nav-link disabled " href="./pages/billing.html">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
@@ -65,7 +103,7 @@
                         </div>
                         <span class="nav-link-text ms-1">Acompanhante</span>
                     </a>
-                </li>
+                </li>*@
               @*  <li class="nav-item">
                     <a class="nav-link disabled " href="./pages/rtl.html">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
@@ -73,7 +111,7 @@
                         </div>
                         <span class="nav-link-text ms-1">RTL</span>
                     </a>
-                </li>*@
+                </li>
                 @*<li class="nav-item mt-3">
                     <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
                 </li>
@@ -121,14 +159,15 @@
                             <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" placeholder="Type here...">
                         </div>
-                    </div>
+                    </div>*@
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
                             <a href="javascript:;" class="nav-link text-white font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
-                                <span class="d-sm-inline d-none">Sign In</span>
+                                <span class="d-sm-inline d-none">Sair</span>
                             </a>
                         </li>
+                        @*
                         <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
                             <a href="javascript:;" class="nav-link text-white p-0" id="iconNavbarSidenav">
                                 <div class="sidenav-toggler-inner">
@@ -227,7 +266,7 @@
             
         </div>
     </main>
-    <div class="fixed-plugin">
+    @*<div class="fixed-plugin">
         <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
             <i class="fa fa-cog py-2"> </i>
         </a>
@@ -298,14 +337,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <!--   Core JS Files   -->
     <script src="/assets/js/core/popper.min.js"></script>
     <script src="/assets/js/core/bootstrap.min.js"></script>
     <script src="/assets/js/plugins/perfect-scrollbar.min.js"></script>
     <script src="/assets/js/plugins/smooth-scrollbar.min.js"></script>
     <script src="/assets/js/plugins/chartjs.min.js"></script>
-    <script>
+    @*<script>
         var ctx1 = document.getElementById("chart-line").getContext("2d");
 
         var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
@@ -387,7 +426,7 @@
             },
           },
         });
-    </script>
+    </script>*@
     <script>
         var win = navigator.platform.indexOf('Win') > -1;
         if (win && document.querySelector('#sidenav-scrollbar')) {
