--- a/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel>;
+﻿@using Prontuario_do_Paciente_Online.Models.Enums;
+@model Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel;
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -6,33 +7,37 @@
 <h1>Cadastro do Paciente</h1>
 <html>
 <body>
+    <card>
+
+    </card>
     <div class="container">
-        <form>
+        <div asp-validation-summary="All"></div>
+        <form asp-action="Create" method="POST">
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">Nome</label>
-                        <input class="form-control" type="text" id="pessoa-nome" placeholder="Digite o nome">
+                        <label asp-for="Nome" class="form-control-label"></label>
+                        <input asp-for="Nome" class="form-control" placeholder="Digite o nome">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="pessoa-idade" class="form-control-label">Idade</label>
-                        <input class="form-control" type="number" id="pessoa-idade" placeholder="Digite a idade">
+                        <label asp-for="Idade" class="form-control-label"></label>
+                        <input asp-for="Idade" class="form-control" placeholder="Digite a idade">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="pessoa-cpf" class="form-control-label">CPF</label>
-                        <input class="form-control" type="text" id="pessoa-cpf" placeholder="Digite o CPF">
+                        <label asp-for="Cpf" class="form-control-label"></label>
+                        <input asp-for="Cpf" class="form-control" placeholder="Digite o CPF">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="endereco-estado" class="form-control-label">Estado</label>
-                        <select class="form-control" id="endereco-estado">
+                        <label asp-for="Estado" class="form-control-label"></label>
+                        <select class="form-control" name="Estado">
                             <option value="" disabled selected>Selecione um estado</option>
                             <option value="AC">Acre</option>
                             <option value="AL">Alagoas</option>
@@ -68,137 +73,140 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="endereco-cidade" class="form-control-label">Cidade</label>
-                        <input class="form-control" type="text" id="endereco-cidade"placeholder="Digite a cidade">
+                        <label asp-for="Cidade" class="form-control-label"></label>
+                        <input asp-for="Cidade" class="form-control" placeholder="Digite a Cidade">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="endereco-rua" class="form-control-label">Endereço</label>
-                        <input class="form-control" type="text" id="endereco-rua" placeholder="Digite o nome da rua">
+                        <label asp-for="Endereco" class="form-control-label"></label>
+                        <input asp-for="Endereco" class="form-control" placeholder="Digite o nome da rua">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="endereco-numero" class="form-control-label">Número</label>
-                        <input class="form-control" type="number" id="endereco-numero" placeholder="Digite o numero da residência">
+                        <label asp-for="Numero" class="form-control-label"></label>
+                        <input asp-for="Numero" class="form-control" placeholder="Digite o numero">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="justificativa">Motivo da internação</label>
-                        <textarea class="form-control" id="justificativa" rows="2"></textarea>
+                        <label asp-for="MotivoInternacao" class="form-control-label"></label>
+                        <input asp-for="MotivoInternacao" class="form-control" rows="2" placeholder="Digite o motivo da internação">
+
                     </div>
                 </div>
             </div>
+
+            <hr />
+            <h4>Dados do Acompanhante</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.NomeAcompanhante" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.NomeAcompanhante" class="form-control" placeholder="Digite o nome">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.CpfAcompanhante" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.CpfAcompanhante" class="form-control" placeholder="Digite o CPF">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.EstadoAcompanhante" class="form-control-label"></label>
+                            <select class="form-control" name="Acompanhante.EstadoAcompanhante">
+                                <option value="" disabled selected>Selecione um estado</option>
+                                <option value="AC">Acre</option>
+                                <option value="AL">Alagoas</option>
+                                <option value="AP">Amapá</option>
+                                <option value="AM">Amazonas</option>
+                                <option value="BA">Bahia</option>
+                                <option value="CE">Ceará</option>
+                                <option value="DF">Distrito Federal</option>
+                                <option value="ES">Espírito Santo</option>
+                                <option value="GO">Goiás</option>
+                                <option value="MA">Maranhão</option>
+                                <option value="MT">Mato Grosso</option>
+                                <option value="MS">Mato Grosso do Sul</option>
+                                <option value="MG">Minas Gerais</option>
+                                <option value="PA">Pará</option>
+                                <option value="PB">Paraíba</option>
+                                <option value="PR">Paraná</option>
+                                <option value="PE">Pernambuco</option>
+                                <option value="PI">Piauí</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <option value="RN">Rio Grande do Norte</option>
+                                <option value="RS">Rio Grande do Sul</option>
+                                <option value="RO">Rondônia</option>
+                                <option value="RR">Roraima</option>
+                                <option value="SC">Santa Catarina</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="SE">Sergipe</option>
+                                <option value="TO">Tocantins</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.CidadeAcompanhante" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.CidadeAcompanhante" class="form-control" placeholder="Digite a cidade">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.EnderecoAcompanhante" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.EnderecoAcompanhante" class="form-control" placeholder="Digite o endereço">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.NumeroAcompanhante" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.NumeroAcompanhante" class="form-control" placeholder="Digite o numero da residencia">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.GrauParentesco" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.GrauParentesco" class="form-control" placeholder="Digite o grau de parentesco">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.UsuarioAcesso.Usuario" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.UsuarioAcesso.Usuario" class="form-control" placeholder="Digite o usuario">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Acompanhante.UsuarioAcesso.Email" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.UsuarioAcesso.Email" class="form-control" placeholder="Digite o e-mail">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group" type="password">
+                            <label asp-for="Acompanhante.UsuarioAcesso.SenhaAcesso" class="form-control-label"></label>
+                            <input asp-for="Acompanhante.UsuarioAcesso.SenhaAcesso" class="form-control" placeholder="Senha de acesso">
+                        </div>
+                    </div>
+                    
+                    <input type="hidden" asp-for="Acompanhante.UsuarioAcesso.TipoAcesso" value="@((int)EnumTipoAcesso.Acompanhante)"   />
+                    
+                    <div>
+                        <button type="button" class="btn btn-secondary btn-sm">Cancelar</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+                    </div>
+
+                </div>
         </form>
-        <hr />
-    </div>
-    <h4>Dados do Acompanhante</h4>
-    <div class="container">
-        <form>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">Nome</label>
-                        <input class="form-control" type="text" id="pessoa-nome" placeholder="Digite o nome do acompanhante">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="pessoa-cpf" class="form-control-label">CPF</label>
-                        <input class="form-control" type="text" id="pessoa-cpf" placeholder="Digite o CPF">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="endereco-estado" class="form-control-label">Estado</label>
-                        <select class="form-control" id="endereco-estado-acompanhante">
-                            <option value="" disabled selected>Selecione um estado</option>
-                            <option value="AC">Acre</option>
-                            <option value="AL">Alagoas</option>
-                            <option value="AP">Amapá</option>
-                            <option value="AM">Amazonas</option>
-                            <option value="BA">Bahia</option>
-                            <option value="CE">Ceará</option>
-                            <option value="DF">Distrito Federal</option>
-                            <option value="ES">Espírito Santo</option>
-                            <option value="GO">Goiás</option>
-                            <option value="MA">Maranhão</option>
-                            <option value="MT">Mato Grosso</option>
-                            <option value="MS">Mato Grosso do Sul</option>
-                            <option value="MG">Minas Gerais</option>
-                            <option value="PA">Pará</option>
-                            <option value="PB">Paraíba</option>
-                            <option value="PR">Paraná</option>
-                            <option value="PE">Pernambuco</option>
-                            <option value="PI">Piauí</option>
-                            <option value="RJ">Rio de Janeiro</option>
-                            <option value="RN">Rio Grande do Norte</option>
-                            <option value="RS">Rio Grande do Sul</option>
-                            <option value="RO">Rondônia</option>
-                            <option value="RR">Roraima</option>
-                            <option value="SC">Santa Catarina</option>
-                            <option value="SP">São Paulo</option>
-                            <option value="SE">Sergipe</option>
-                            <option value="TO">Tocantins</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="endereco-cidade" class="form-control-label">Cidade</label>
-                        <input class="form-control" type="text" id="endereco-cidade" placeholder="Digite a cidade">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="endereco-rua" class="form-control-label">Endereço</label>
-                        <input class="form-control" type="text" id="endereco-rua" placeholder="Digite o nome da rua">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="endereco-numero" class="form-control-label">Número</label>
-                        <input class="form-control" type="number" id="endereco-numero" placeholder="Digite o numero da residência">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">Grau de parentesco</label>
-                        <input class="form-control" type="text" id="pessoa-grau-parentesco" placeholder="Digite o grau de parentesco">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">E-mail</label>
-                        <input class="form-control" type="text" id="pessoa-email" placeholder="Digite o e-mail">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">Senha de acesso</label>
-                        <input class="form-control" type="password" id="pessoa-senha-acesso" placeholder="Digite a senha">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="pessoa-nome" class="form-control-label">Confirme a senha</label>
-                        <input class="form-control" type="password" id="pessoa-senha-acesso-confirme" placeholder="Digite a senha novamente">
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-sm">Cancelar</button>
-        <button type="button" class="btn btn-primary btn-sm">Salvar</button>
     </div>
 </body>
 </html>
