--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -12,7 +12,6 @@
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Motivo da Internacao</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ações</th>
                 </tr>
             </thead>
@@ -29,16 +28,13 @@
                         <td class="align-middle">
                             @item.MotivoInternacao
                         </td>
-                        <td class="align-middle">
-                            @item.StatusPaciente
-                        </td>
                         <td class="align-middle position-relative">
                             <div class="dropdown position-static">
                                 <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Ações
                                 </button>
                                 <div class="dropdown-menu position-absolute" style="right: 0;">
-                                    <a class="dropdown-item details-button" data-id="@item.Id">Detalhes</a>
+                                    <a class="dropdown-item details-button" asp-route-id="@item.Id" asp-controller="Pacientes" asp-action="Details">Detalhes</a>
                                     <a class="dropdown-item" href="#">Editar</a>
                                 </div>
                             </div>
@@ -47,8 +43,10 @@
                 }
             </tbody>
         </table>
+
     </div>
 </div>
+
 
 
 
