Add logo and edit nav bar tela admin

--- a/Prontuario do Paciente Online/wwwroot/assets/css/argon-dashboard.css
+++ b/Prontuario do Paciente Online/wwwroot/assets/css/argon-dashboard.css
@@ -22480,6 +22480,7 @@ hr.horizontal.gray-light {
 .navbar-vertical .navbar-brand-img {
   max-width: 100%;
   max-height: 2rem;
+
 }
 
 .navbar-vertical .navbar-nav .nav-link {
@@ -23289,7 +23290,9 @@ hr.horizontal.gray-light {
 }
 
 .sidenav-header {
-  height: 4.875rem;
+  height: 4.4rem;
+  position: relative;
+  left: 2rem;
 }
 
 .sidenav-footer .card.card-background:after {
