--- a/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
+++ b/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
@@ -22,13 +22,12 @@
 </head>
 
 <body class="g-sidenav-show bg-gray-100">
-    <div class="min-height-100 bg-primary position-absolute w-100 mb-4"></div>
+    <div class="min-height-100 bg-default position-absolute w-100 mb-4"></div>
     <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" asp-controller="Home"asp-action="Index">
-                <img src="/assets/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold">On Pront</span>
+                <img src="/assets/img/Logo.svg" class="navbar-brand-img h-100" alt="main_logo">
             </a>
         </div>
         <hr class="horizontal dark mt-0">
