--- a/Prontuario do Paciente Online/Views/UsuarioAcesso/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/UsuarioAcesso/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@model IEnumerable<Prontuario_do_Paciente_Online.Models.Paciente>;
+﻿@model IEnumerable<Prontuario_do_Paciente_Online.Models.UsuarioAcesso>;
 @{
-    ViewData["Title"] = "Pacientes Cadastrados";
+    ViewData["Title"] = "Usuários Cadastrados";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 <h2>@ViewData["Title"]</h2>
+
+
 <div class="table">
     <div class="table-responsive">
         @if (Model.Any())
@@ -11,9 +13,9 @@
             <table class="table align-items-center mb-0">
                 <thead>
                     <tr>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
-                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Motivo da Internacao</th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Usuario</th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">E-mail</th>
+                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Tipo Acesso</th>
                         <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ações</th>
                     </tr>
                 </thead>
@@ -22,13 +24,13 @@
                     {
                         <tr>
                             <td class="align-middle">
-                                @item.Nome
+                                @item.Usuario
                             </td>
                             <td class="align-middle">
-                                @item.Idade
+                                @item.Email
                             </td>
                             <td class="align-middle">
-                                @item.MotivoInternacao
+                                @item.TipoAcesso.ToString()
                             </td>
                             <td class="align-middle position-relative">
                                 <div class="dropdown position-static">
@@ -36,8 +38,8 @@
                                         Ações
                                     </button>
                                     <div class="dropdown-menu position-absolute" style="right: 0;">
-                                        <a class="dropdown-item details-button" asp-route-id="@item.Id" asp-controller="Pacientes" asp-action="Details">Detalhes</a>
-                                        <a class="dropdown-item" href="#">Editar</a>
+                                        <a class="dropdown-item details-button" asp-route-id="#" asp-controller="#" asp-action="#">Editar</a>
+                                        <a class="dropdown-item" href="#">Excluir</a>
                                     </div>
                                 </div>
                             </td>
@@ -48,11 +50,7 @@
         }
         else
         {
-            <p>Não existe dados para serem exibidos</p>
+            <p>Não existe dados para ser exibidos</p>
         }
     </div>
 </div>
-
-
-
-
