Alteração no LayoutAdmin, inserção Resumo pacientes

--- a/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
+++ b/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="collapse" href="#submenu-administrativo">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-settings-gear-65 text-info text-sm opacity-10"></i>
+                            <i class="ni ni-briefcase-24 text-primary text-sm opacity-10"></i>
                         </div>
                         <span class="nav-link-text ms-1">Administrativo</span>
                     </a>
@@ -90,7 +90,7 @@
                 <li class="nav-item">
                     <a class="nav-link disabled " href="./pages/billing.html">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-credit-card text-success text-sm opacity-10 disabled"></i>
+                            <i class="ni ni-badge text-success text-sm opacity-10 disabled"></i>
                         </div>
                         <span class="nav-link-text ms-1">Prontuario</span>
                     </a>
@@ -98,7 +98,7 @@
                 <li class="nav-item">
                     <a class="nav-link disabled " href="./pages/virtual-reality.html">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-app text-info text-sm opacity-10 disabled"></i>
+                            <i class="ni ni-circle-08 text-warning text-sm opacity-10 disabled"></i>
                         </div>
                         <span class="nav-link-text ms-1">Acompanhante</span>
                     </a>
