--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-    
-    <body>
+
+<body>
     <main class="main-content mt-4">
         <div class="card">
             <div class="tittle-text m-4">
@@ -183,35 +183,81 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
-            <div class="card-container card-frame d-flex gap-4 justify-content-center mb-5 mt-4">
-                <div class="card card-frame btn bg-gradient-info w-17 mt-3">
-                    <div class="card-body text-center">
-                        <span class="text-xs font-weight-bold">TOTAL PACIENTES</span>
-                        <h1>10</h1>
-                    </div>
-                </div>
-                <div class="card card-frame btn bg-gradient-warning w-17 mt-3">
-                    <div class="card-body text-center">
-                        <span class="text-xs font-weight-bold">PACIENTE ESTÁVEL</span>
-                        <h1>3</h1>
-                    </div>
-                </div>
-                <div class="card card-frame btn bg-gradient-danger w-17 mt-3">
-                    <div class="card-body text-center">
-                        <span class="text-xs font-weight-bold">PACIENTE GRAVE</span>
-                        <h1>3</h1>
-                    </div>
-                </div>
-                <div class="card card-frame btn bg-gradient-success w-17 mt-3">
-                    <div class="card-body text-center">
-                        <span class="text-xs font-weight-bold">PACIENTE ALTA</span>
-                        <h1>4</h1>
+                <div class="d-flex justify-content-start">
+                    <div class="card p-3">
+                        <div class="card-body">
+                            <p>Quantidade Pacientes por Status</p>
+                            <div class="chart">
+                                <canvas id="pie-chart" class="chart-canvas" height="300"></canvas>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-</main>
- </body>
+    </main>
+</body>
 </html>
+
+<script src="../../assets/js/plugins/chartjs.min.js"></script>
+
+<script>
+    var graficoPizza = document.getElementById('pie-chart').getContext("2d");
+
+    new Chart(graficoPizza, {
+        type: "doughnut",
+        data: {
+            labels: ['Grave', 'Crítico', 'Estável'],
+            datasets: [{
+                label: "Status",
+                weight: 9,
+                cutout: 60,
+                tension: 0.9,
+                pointRadius: 2,
+                borderWidth: 2,
+                backgroundColor: ['#ff2121', '#ff9021', '#2cff21'],
+                data: [5, 10, 15],
+                fill: false
+            }],
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+                legend: {
+                    display: false,
+                }
+            },
+            interaction: {
+                intersect: false,
+                mode: 'index',
+            },
+            scales: {
+                y: {
+                    grid: {
+                        drawBorder: false,
+                        display: false,
+                        drawOnChartArea: false,
+                        drawTicks: false,
+                    },
+                    ticks: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        drawBorder: false,
+                        display: false,
+                        drawOnChartArea: false,
+                        drawTicks: false,
+                    },
+                    ticks: {
+                        display: false,
+                    }
+                },
+            },
+        },
+    });
+</script>
+
 
