Corrige tela de cadastro do paciente, implementa funcionalidade

--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -41,7 +41,7 @@
                                     </td>
                                     <td>
                                         <button type="button" class="btn btn-secondary btn-sm">Editar</button>
-                                        <button type="button" class="btn btn-default btn-sm">Detalhes</button>
+                                        <button asp-controller="Pacientes" asp-action="Edit" type="button" class="btn btn-default btn-sm">Detalhes</button>
                                     </td>
                                 </tr>
                             }
