--- a/Prontuario do Paciente Online/Views/Pacientes/Edit.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Edit.cshtml
@@ -1,8 +1,39 @@
 ﻿@model Prontuario_do_Paciente_Online.ViewModels.PacientesViewModel;
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Dados do Paciente e Acompanhante";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Editar dados do Paciente</h1>
 
+<form method="post">
+    <div class="form-group">
+        <label asp-for="Nome"></label>
+        <input asp-for="Nome" class="form-control" />
+        <span asp-validation-for="Nome" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Idade"></label>
+        <input asp-for="Idade" class="form-control" />
+        <span asp-validation-for="Idade" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Cpf"></label>
+        <input asp-for="Cpf" class="form-control" />
+        <span asp-validation-for="Cpf" class="text-danger"></span>
+    </div>
+
+    <h3>Dados Acompanhante</h3>
+    <div class="form-group">
+        <label asp-for="Acompanhante.NomeAcompanhante"></label>
+        <input asp-for="Nome" class="form-control" />
+        <span asp-validation-for="Nome" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Acompanhante.CpfAcompanhante"></label>
+        <input asp-for="Acompanhante.CpfAcompanhante" class="form-control" />
+        <span asp-validation-for="Acompanhante.CpfAcompanhante" class="text-danger"></span>
+    </div>
+   
+    <button type="submit" class="btn btn-primary">Salvar</button>
+</form>
