--- a/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
+++ b/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
@@ -38,14 +38,16 @@
                                     <span asp-validation-for="Usuario" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label asp-for="Password" class="form-control-label"></label>
                                     <input asp-for="Password" class="form-control" placeholder="Digite a senha" required>
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label asp-for="ConfirmPassword" class="form-control-label"></label>
                                     <input type="password" asp-for="ConfirmPassword" class="form-control" placeholder="Digite a senha novamente" required>
