--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -40,8 +40,8 @@
                                         <h3 class="mb-0 text-xs"> @item.MotivoInternacao</h3>
                                     </td>
                                     <td>
-                                        <a asp-controller="pacientes" asp-action="edit" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Editar</a>
-                                        <button type="button" class="btn btn-default btn-sm">Detalhes</button>
+@*                                        <a asp-controller="pacientes" asp-action="edit" asp-route-id="@item.Id" class="btn btn-secondary btn-sm disabled">Editar</a>
+*@                                        <a asp-controller="pacientes" asp-action="details" asp-route-id="@item.Id" class="btn btn-default btn-sm">Detalhes</a>
                                     </td>
                                 </tr>
                             }
